--- a/_includes/folium-loader.html
+++ b/_includes/folium-loader.html
@@ -1,17 +1,3 @@
-{% comment %} Load Folium HTML files into an Iframe {% endcomment %}
-
-
-<script type="text/javascript">
-  {% for chart in page.folium-loader %}
-  
-  document.addEventListener("DOMContentLoaded", function () {
-    let el = document.getElementById("{{ chart[0] }}")
-    if (el === null)
-      alert("Error: cannot embed HTML chart because the div element with id '{{ chart[0] }}' does not exist.")
-    let spec = "{{ site.baseurl }}/{{ chart[1][0] }}";
-    let height = "{{ chart[1][1] }}"
-    
-    el.innerHTML = `<iframe width="100%" height="${height}px" scrolling="no" frameborder="0" src="${spec}"></iframe>`;
-  });
-  {% endfor %}  
-</script>
+version https://git-lfs.github.com/spec/v1
+oid sha256:685ec0002106af5911bdd094fa987e9f789575582488c1a770687c159ba58698
+size 659
