--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,3 @@
-{% include hv-loader.html %}
-{% include altair-loader.html %}
-{% include folium-loader.html %}
-
-<link rel="stylesheet" href="/assets/css/custom.css">
+version https://git-lfs.github.com/spec/v1
+oid sha256:1bee4c529f1d036bc6c95511fd299258b86a905c39cbd3a015d1d2a4ede2309a
+size 153
