--- a/_includes/hv-loader.html
+++ b/_includes/hv-loader.html
@@ -1,15 +1,3 @@
-{% comment %} Load HTML files into an Iframe {% endcomment %}
-
-
-<script type="text/javascript">
-  {% for chart in page.hv-loader %}
-    document.addEventListener("DOMContentLoaded",function(){
-      let el = document.getElementById("{{ chart[0] }}")
-      if (el===null)
-        alert("Error: cannot embed HTML chart because the div element with id '{{ chart[0] }}' does not exist.")
-      let spec = "{{ site.baseurl }}/{{ chart[1][0] }}";
-      let height = "{{ chart[1][1] }}";
-      el.innerHTML = `<iframe width="100%" scrolling="no" frameborder="0" src="${spec}" height="${height}px"></iframe>`;
-    });
-  {% endfor %}
-</script>
+version https://git-lfs.github.com/spec/v1
+oid sha256:f2e69be94b304ea35bc6a59fa28798ad9cf58a4ee8a401a1f1317516039a334c
+size 650
