--- a/_includes/altair-loader.html
+++ b/_includes/altair-loader.html
@@ -1,20 +1,3 @@
-{% comment %} Load a JSON spec for vega-lite into the specified container using
-vegaEmbed {% endcomment %}
-<style>
-  .error {
-    color: red;
-  }
-  .vega-bindings {
-    display: none !important;
-  }
-</style>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega@5"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-lite@4.8.1"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-embed@6"></script>
-
-<script type="text/javascript">
-  {% for chart in page.altair-loader %}
-    vegaEmbed("#{{ chart[0] }}", "{{ site.baseurl }}/{{ chart[1] }}")
-      .catch(console.error);
-  {% endfor %}
-</script>
+version https://git-lfs.github.com/spec/v1
+oid sha256:89dfa72f57de024e2392d2a8b0a24d30ed1ed0cc18e2b25433be233255f1c4ca
+size 692
